# human_match_app

./: .firebaserc  Anuncios_funcionam_mas_info_nao_carrega_novamente_apos_alteração_do_perfil_nem_os_insights.patch  README.md  app-ads.txt  build_wasm.bat  firebase.json  firestore.rules  l10n.yaml  package-lock.json  pubspec.yaml
.firebase/: hosting.YnVpbGRcd2Vi.cache  hosting.cHVibGlj.cache
.github/workflows/: firebase-hosting-deploy.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts  google-services.json
android/app/src/main/cpp/: CMakeLists.txt  swe_wrapper.c  swe_wrapper_wasm.c
android/gradle/: gradle-daemon-jvm.properties
android_old/app/: build.gradle.kts  google-services.json
assets/places/: europe_places.json
functions/: package-lock.json  package.json  tsconfig.json
functions/src/: index.ts
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: ai_actions.dart  app_terms.dart  firebase_options.dart  main.dart
lib/ads/: ads_service.dart  rewarded_ad_service.dart
lib/calc/: astrology.dart  hd_constants.dart  human_design.dart  human_design_base.dart  insights_bundle.dart  numerology.dart
lib/data/: insights_repo.dart
lib/hd/: ephe_assets.dart  hd_data_utils.dart  hd_time.dart  human_design_section.dart  julian.dart  swiss_ephemeris.dart  swiss_ephemeris_android.dart  swiss_ephemeris_ffi.dart  swiss_ephemeris_service.dart  (+2 more)
linux/: CMakeLists.txt
public/: index.html  new2.sh
quit/: package-lock.json
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+53 files in other folders)
